fix tag wrap and card text alignment

--- a/src/components/MediaItem.css
+++ b/src/components/MediaItem.css
@@ -1,10 +1,12 @@
 .col-6{
     font-weight: bold;
 }
+.col-12 .row {
+    padding: 0 0.75rem;
+}
 span {
     padding: 0 0.5rem 0.25rem;
     border-radius: 0.25rem;
-    margin-right: .25rem;
     font-size: small;
 }
 .complete {
